fix uncommented yaml option
Signed-off-by: Alec Holmes <alecholmez@me.com>

--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -21,5 +21,5 @@ jobs:
           version: latest
           only-new-issues: true
           
-          Optional: golangci-lint command line arguments.
+          # Optional: golangci-lint command line arguments.
           args: --timeout=10m0s
